# gambling-blocker

./: .gitignore  main.py  pyproject.toml
backend/: .gitignore  dataset_crawl.csv  dataset_crawl.json  makefile  pyproject.toml
backend/constant/: link.py
backend/crawl/: __main__.py  links.py  multi_domain_crawler.py
backend/crawler/: __main__.py  crawler.py  fetcher.py  links.py  logger.py  storage.py
backend/custom_types/: models.py
backend/data/: domain.csv  generate_dataset.py  generate_dataset_domain.py  websites.csv
backend/dataset/: dataset_crawl 27042026.json  dataset_crawl_27042026.csv
backend/lib/: config.py  fetcher.py  html_extractor.py  logger.py
backend/model/: Domain_Text_Classifier.ipynb  cleaning.ipynb  domain-only.ipynb  main.ipynb  model.ipynb  tutorial.ipynb  url-only.ipynb
backend/model/.ipynb_checkpoints/: main-checkpoint.ipynb
backend/model/dataset/: dataset_crawl_26042026.csv  dataset_crawl_26042026.json  raw_dataset.csv  raw_dataset.jsonl
backend/scraper/: __main__.py  extractor.py  loader.py  main.py  scraper_engine.py  storage.py
backend/scraper/constant/: urls.csv
backend/settings/: crawler.py
backend/utils/: crawler.py
