[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.7",
    "dnspython>=2.8.0",
    "ipwhois>=1.3.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "python-whois>=0.9.6",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tldextract>=5.3.1",
    "tqdm>=4.67.3",
    "wordcloud>=1.9.6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
